# course-rust

./: README.md
course-nc/01-basic/doc/: 01-install-rust.md
course-nc/01-get started/: 02-update-rust.md  03-projects-without-cargo.md
course-nc/01-get-started/: 02-install.md
course-nc/02-the-book/16-traits/: 01-trait.md
courses/01-get-started/: 04-compiler-rustc.md  05-cargo.md
courses/02-course-nc/07-shadowing/: replaced-property-variables.md
courses/02-course-nc/16-traits/: 01-trait.md
courses/04-rust-by-example/01-introduction/: 02-formatted print.md  03-examples-formatted-print.rs  04-format.rs  rust-by-example.md
courses/04-rust-by-example/02-hello-world/: hello-world.rs
courses/06-compiler/: compiler-cargo.md
courses/07-crates/01-get-started/: 01-crates.md
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/: .env  Cargo.toml  diesel.toml
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/migrations/2024-09-27-032721_create_posts/: down.sql  up.sql
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/migrations/2024-10-03-224706_create_posts/: down.sql  up.sql
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/migrations/2024-10-05-023240_create_posts/: up.sql
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/migrations/2024-10-05-033419_create_posts/: up.sql
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/migrations/2024-10-05-041452_create_posts/: up.sql
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/requests/: request_users.http
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/src/: main.rs  schema.rs
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/src/dto/: dto-users.rs
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/src/models/: model-users.rs  model_users.rs
courses/rust-backend/courses/frameworks/actix/exercises/actix-api-diesel-postgres/src/services/: mod.rs  service_users.rs
courses/rust-backend/exercises/: testdb.db
courses/rust-backend/exercises/api-rest-rocket-sqlite-01/: Cargo.toml
courses/rust-backend/exercises/api-rest-rocket-sqlite-01/src/: main.rs
courses/rust-backend/exercises/api-rest-rocket-sqlite-01/src/data/: data.rs
courses/rust-backend/exercises/api-rest-rocket-sqlite-01/src/database/db/: person.db
courses/rust-backend/exercises/api-rest-rocket-sqlite-01/src/templates/: index.hbs
courses/rust-backend/frameworks/actix-web/examples/web-server-api-actix-postgresql/: Cargo.toml
courses/rust-backend/frameworks/actix-web/examples/web-server-api-actix-postgresql/migrations/2024-09-26-232339_create_bbdd/: up.sql
courses/rust-backend/frameworks/actix-web/examples/web-server-api-actix-postgresql/src/api/: garage_api.rs  working_cars_api.rs
courses/rust-backend/frameworks/actix-web/examples/web-server-api-actix-postgresql/src/web_pages/: mod.rs
courses/rust-command-line-interface/courses/: 01-documentation.md
courses/rust-frontend/dioxus/examples/dioxus-wifiscanner/: Cargo.toml  Dioxus.toml
courses/rust-frontend/dioxus/examples/scaffolding-web-router-css/: Cargo.toml  Dioxus.toml
courses/rust-frontend/examples/template-web-tailwind/: Cargo.toml  Dioxus.toml
courses/rust-test/courses/: command.md
courses/rust-webassembly/courses/: learn-wasm-rust.md  rust-webassembly.md
examples/01-basic/bot-game-moneky/: Cargo.toml
examples/01-basic/example-library/: Cargo.toml
examples/01-basic/options-list/: Cargo.toml
examples/01-basic/todo-list-app/: Cargo.toml
examples/01-basic/todo-list-console/: Cargo.toml  todo.txt
examples/todo-list/src/: main.rs
resources/lib/: The Rust Standard Library.lib
(+276 files in other folders)
