[package]
name = "api-rest-rocket-sqlite-01"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
diesel = "2.1.6"
diesel_migrations = "2.2.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite", "diesel_mysql"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool", "sqlite_pool"]
