[package]
name = "dioxus-wifiscanner"
version = "0.1.0"
authors = ["Andres Giraldo <andresganc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
anyhow = "1.0.52"
pretty_env_logger = "0.5.0"
tokio = { version = "1.12.0", features = ["full"] }
wifiscanner = "0.5.1"
futures-channel = "0.3.19"
futures = "0.3.19"

# Debug
#dioxus-logger = "0.5.1"
