[package]
name = "web-server-api-actix-postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres","uuid","chrono","numeric","r2d2"] }
bigdecimal = "0.4.5"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"]}
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
actix-web-actors = "4.1"
actix = "0.13"
actix-cors = "0.7.0"
tera = "1.10.0"


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
