[package]
name = "actix-api-diesel-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
bigdecimal = "0.4.5"
dotenvy = "0.15.7"
serde_json = "1.0.128"
tera = "1.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
diesel = { version = "2.2.4", features = [
  "postgres",
  "uuid",
  "chrono",
  "numeric",
  "r2d2",
] }


[dependencies.uuid]
version = "1.10.0"

features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
